visibility fix (again) for letter buttons

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,7 +10,6 @@ body {
 // Utility classes
 .hidden {
   visibility: hidden;
-  display: none;
 }
 
 .app-container {
